src/sensor_network.rs

/* automatically generated by rust-bindgen */

pub const SENSOR_NETWORK_SIZE: u32 = 5;
pub type __uint8_t = ::cty::c_uchar;
pub type __uint16_t = ::cty::c_ushort;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct oc_server_handle {
    _unused: [u8; 0],
}
extern "C" {
    pub fn init_sensor_post(
        server: *mut oc_server_handle,
        uri: *const ::cty::c_char,
        coap_content_format: ::cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn do_sensor_post() -> bool;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sensor_network_interface {
    pub iface_type: u8,
    pub network_device: *const ::cty::c_char,
    pub server_endpoint_size: u8,
    pub register_transport_func: ::core::option::Option<
        unsafe extern "C" fn(
            network_device: *const ::cty::c_char,
            server_endpoint: *mut ::cty::c_void,
            host: *const ::cty::c_char,
            port: u16,
            server_endpoint_size: u8,
        ) -> ::cty::c_int,
    >,
    pub transport_registered: u8,
}
extern "C" {
    pub fn sensor_network_register_transport(iface_type: u8) -> ::cty::c_int;
}
extern "C" {
    pub fn init_server_post(uri: *const ::cty::c_char) -> bool;
}
extern "C" {
    pub fn init_collector_post() -> bool;
}
extern "C" {
    pub fn sensor_network_init_post(iface_type: u8, uri: *const ::cty::c_char) -> bool;
}
extern "C" {
    pub fn do_server_post() -> bool;
}
extern "C" {
    pub fn do_collector_post() -> bool;
}
extern "C" {
    pub fn sensor_network_do_post(iface_type: u8) -> bool;
}
extern "C" {
    pub fn sensor_network_init();
}
extern "C" {
    pub fn sensor_network_register_interface(
        iface: *const sensor_network_interface,
    ) -> ::cty::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sensor_network_endpoint {
    pub endpoint: [u8; 16usize],
}
extern "C" {
    pub static mut sensor_network_interfaces: [sensor_network_interface; 2usize];
}
extern "C" {
    pub static mut sensor_network_endpoints: [sensor_network_endpoint; 2usize];
}
extern "C" {
    pub static mut sensor_network_encoding: [::cty::c_int; 2usize];
}
extern "C" {
    pub static mut sensor_network_shortname: [*const ::cty::c_char; 2usize];
}
